# AIHub

./: .gitignore  LICENSE  README.md  __main__.py  credits.md  demos.py  ideas.md  index.html  progress.md  pyproject.toml  readme.md  requirements.txt  setup.py  title.py
.github/scripts/: notifyDiscord.js
.github/workflows/: github_workflow.yaml  python-publish.yml
AIHub/: __main__.py
AIHub/UI/: chat.html  init.html  script.js  style.css  template.html
AIHub/UI/chat/: extra.css  extra.html  extra.js
AIHub/providers/: G4FProv.py  __init__.py  base.py  ollamaProv.py
BlazeSudio/: __init__.py
BlazeSudio/bot/: AIs.py  BetterModel.py  __init__.py  basebots.py  copilot.py  gpt4real.py  install_tinyllm.py  model_selection.py  preferencesDefault.json  set_preferences.py  tinyllm.py
BlazeSudio/conversation_parse/: __init__.py  consts.py  conversation_parser.py
BlazeSudio/data/nodes/: 0GameIO.py  1IO.py  2Math.py  types.json
BlazeSudio/elementGen/: __init__.py  node_editor.py  node_parser.py  types.py
BlazeSudio/graphics/: __init__.py  elements.py  graphics.py  loading.py  options.py  stuff.py
BlazeSudio/graphics/GUI/: __init__.py  colourpick.py  elements.py  events.py
BlazeSudio/ldtk/: Pyldtk.py  __init__.py  application.py
BlazeSudio/overlay/: __init__.py  window.py
BlazeSudio/utils/: __init__.py  characters.py  converse.py  discussions.py  player.py
BlazeSudio/worldGen/: __init__.py  terrainGen.py  world.py
docs/: README.md  SUMMARY.md  devs.md
docs/Installing/: README.md
docs/utils/: character_start.md  summary_syntax.md
tests/: tests.py
(+10 files in other folders)
